#199 spacing issue fix for full width image

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -12,7 +12,7 @@
     margin-bottom: 20px;
   }
   .full-width-image-block {
-    margin: 0px !important;
+    margin: 10px 0px 20px 0px !important;
   }
 
   .image-block {
@@ -644,7 +644,14 @@
       }
     }
 
-
+    .full-width-image-block {
+      margin-bottom: 20px !important;
+      .caption {
+        .paragraph-holder {
+          margin-top: 20px;
+        }
+      }
+    }
     .paragraph-with-quote-block.full-width-quote {
       margin: 0;
       padding: 0 10%;
